# tzdb

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  tzdb-2021e.tar.lz.sha  tzdb-2022a.tar.lz.sha  tzdb-2022b.tar.lz.sha  tzdb-2022c.tar.lz.sha  tzdb-2022d.tar.lz.sha  tzdb-2022e.tar.lz.sha  tzdb-2022g.tar.lz.sha  tzdb.tar.lz.sha
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yml  devskim-analysis.yml
benches/: by-name.rs
benchmarks/: Cargo.toml
benchmarks/benches/: by-name.rs
examples/: current-time.rs
examples/current-time/: Cargo.toml
examples/current-time/src/: main.rs
fuzz/: .gitignore  Cargo.toml  run.sh
make-tzdb/: Cargo.toml  README.md  generate_lookup_table.py
make-tzdb/src/: lower.rs  main.rs  parse.rs
proptest-regressions/: test_proptest.txt
src/: generated.rs  lib.rs  lower.rs  now.rs  serde_as.rs  serde_as_1.rs  serde_as_2.rs  test_by_name.rs  test_proptest.rs
src/serde_as/: common.rs  float.rs  mod.rs  mod_v1.rs  mod_v2.rs  nanoseconds.rs  seconds.rs  test.rs
src/serde_as_12/: common.rs  float.rs  nanoseconds.rs  seconds.rs
test-artichoke/: Cargo.toml
test-artichoke/src/: main.rs
test-artichoke/tzdb/: Cargo.toml
test-artichoke/tzdb/src/: lib.rs
test-shadow/: Cargo.toml  tzdb
test-shadow/src/: main.rs
testing/: Cargo.toml
testing/tests/: by_name.rs  proptest.rs
tzdb/: Cargo.toml
tzdb/examples/: current-time.rs
tzdb/src/: generated.rs  lib.rs  lower.rs  test_by_name.rs  test_proptest.rs
tzdb/src/serde_as/: common.rs  float.rs  mod.rs  nanoseconds.rs  seconds.rs
tzdb_data/: Cargo.toml  README.md
tzdb_data/src/: lib.rs
