[package]
name = "tzdb"
version = "0.3.11"
edition = "2018"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static time zone information for tz-rs"
license = "Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time"]
readme = "README.md"
#rust-version = "1.55"

[dependencies]
tzdb_05 = { package = "tzdb", version = "0.5.2" }

[dev-dependencies]
proptest = "=1"
test-strategy = "=0.1.2"
structmeta = "=0.1.4"

[features]
default = ["std", "fallback"]

# Compile for unknown target platforms, too:
fallback = ["tzdb_05/fallback"]

# deprecated, unused:
alloc = []
binary = []
by-name = []
iana-time-zone = []
list = []
local = []
phf = []
phf_shared = []
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
