[package]
name = "tzdb"
version = "0.5.7"
edition = "2018"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static time zone information for tz-rs"
license = "Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time"]
readme = "README.md"
# rust-version = "1.56"

[dependencies]
tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "std"] }
iana-time-zone = { version = "^0.1.50", default-features = false }

[dev-dependencies]
criterion = { version = "^0.3.6", default-features = false }
proptest = "=1.0"
rand = { version = "^0.8.5", default-features = false, features = ["std", "small_rng"] }
test-strategy = "=0.1.2"
structmeta = "=0.1.4"

# 1.15 is edition 2021, used (transitively) by criterion
once_cell = "=1.14"
# 1.2 is edition 2021, used (transitively) by criterion
csv = "=1.1"
# 1.8 is edition 2021, used (transitively) by criterion
regex = "=1.7.3"
# 1.7 has rust-version = "1.59", used (transitively) by criterion
rayon = "=1.6"
# 1.11 has rust-version = "1.59", used (transitively) by criterion
rayon-core = "=1.10"

[features]
default = ["fallback"]

# Do not fail to compile for unknown target platforms:
fallback = ["iana-time-zone/fallback"]

[[bench]]
name = "by-name"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    ".",
    "examples/current-time",
    "make-tzdb",
]
