[package]
name = "tzdb"
version = "0.6.1"
edition = "2018"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static time zone information for tz-rs"
license = "Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time"]
readme = "README.md"
# rust-version = "1.56"

[dependencies]
iana-time-zone = { version = "^0.1.50", default-features = false, features = ["fallback"], optional = true }
tzdb_data = { version = "^0.1.0", default-features = false, path = "tzdb_data" }
tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "std"] }

[features]
default = ["local"]
# Enable functions to query the current system time:
local = ["iana-time-zone"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    ".",
    "examples/current-time",
    "tzdb_data",
]
