[package]
name = "tzdb-bench"
version = "0.0.0"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "… benchmarking …"
license = "Apache-2.0"
# rust-version = "1.56"
publish = false

[dependencies]
tzdb = { version = "*", path = ".." }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xoshiro = "0.6.0"
test-strategy = "0.3.0"
structmeta = "0.2.0"

[[bench]]
name = "by-name"
harness = false

[workspace]
members = ["."]
