[package]
name = "make-tzdb"
version = "0.0.0"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Tool to generate `tzdb/src/generated.rs`"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.55"
convert_case = "0.5.0"
indexmap = "1.8.0"
itertools = "0.10.3"
phf_codegen = "0.10.0"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
tz-rs = "0.6.3"
