[package]
name = "make-tzdb"
version = "0.0.0"
edition = "2018"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Tool to generate `tzdb/src/generated.rs`"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "=1"
convert_case = "=0.5"
indexmap = "=1"
itertools = "=0.10"
phf_codegen = "=0.11"
phf_shared = "=0.11"
ron = "=0.8"
serde = { version = "=1", features = ["derive"] }
tz-rs = "=0.6"
