[package]
name = "tzdb-testing"
version = "0.0.0"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "… benchmarking …"
license = "Apache-2.0"
# rust-version = "1.56"
publish = false

[dependencies]
tzdb = { path = ".." }

proptest = "1.2.0"
structmeta = "0.2.0"
test-strategy = "0.3.1"
tz-rs = { version = "^0.6.14", default-features = false, features = ["const", "std"] }

[workspace]
members = ["."]
