[package]
name = "tzdb"
version = "0.1.4"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static time zone information for tz-rs"
license = "Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time"]
readme = "README.md"
rust-version = "1.57"

[dependencies]
tz-rs = "0.6.5"
tzdb_0_2 = { package = "tzdb", version = "0.2.0" }

# optional dependencies
document-features = { version = "=0.2.1", optional = true }
serde = { version = "1.0.136", default-features = false, optional = true }
serde_with = { version = "1.12.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.79"

[features]
default = ["by-name", "list", "local"]
## enables [TimeZoneExt::from_db()] to get a time zone at runtime by name
##
by-name = ["tzdb_0_2/by-name"]
## enables [TimeZoneExt::names_in_db()] to get a list of all shipped time zones
##
list = ["tzdb_0_2/list"]
## enables [TimeZoneExt::local_from_db()] to get the system time zone
##
local = ["tzdb_0_2/local", "by-name"]
## enables [serde_as] to (de)serialize (Utc)DateTimes with [serde][::serde]
##
serde-as = ["tzdb_0_2/serde-as"]

# Internal feature, used when generating docs. *You* are not supposed to enable this feature!
docsrs = ["document-features", "testing"]

# Internal feature, used when testing.
testing = ["serde-as", "serde/derive", "serde_with/macros"]

[package.metadata.docs.rs]
features = ["docsrs"]
all-features = true
