[package]
name = "tzdb"
version = "0.2.1"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static time zone information for tz-rs"
license = "Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time"]
readme = "README.md"
rust-version = "1.57"

[dependencies]
tz-rs = "0.6.9"

# optional dependencies
byte-slice-cast = { version = "1.2.1", optional = true }
iana-time-zone = { version = "0.1.31", optional = true }
phf = { version = "0.10.1", optional = true }
serde = { version = "1.0.136", default-features = false, optional = true }
serde_with = { version = "1.12.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.79"

[features]
default = ["by-name", "list", "local"]
## enables [tz_by_name()] to get a time zone at runtime by name
##
by-name = ["phf", "byte-slice-cast"]
## enables [TZ_NAMES] to get a list of all shipped time zones
##
list = []
## enables [local_tz()] to get the system time zone
##
local = ["by-name", "iana-time-zone"]
## enables the module [serde_as] to (de)serialize (Utc)DateTimes with [serde][::serde]
##
serde-as = ["serde", "serde_with"]
## make the unparsed, binary tzdata of a time zone available
##
binary = []

# Internal feature, used when generating docs. *You* are not supposed to enable this feature!
docsrs = ["testing"]

# Internal feature, used when testing.
testing = ["serde-as", "serde/derive", "serde_with/macros", "binary"]

[package.metadata.docs.rs]
features = ["docsrs"]
all-features = true
