[package]
name = "tzdb_data"
version = "0.1.0-pre.1"
edition = "2018"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/tzdb"
description = "Static, #![no_std] time zone information for tz-rs"
license = "MIT-0"
keywords = ["timezone", "no_std"]
categories = ["date-and-time", "no-std"]
readme = "README.md"
# rust-version = "1.56"

[dependencies]
tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
